# syncomp

./: .gitignore  LICENSE  README.md  eval.sh  pyproject.toml  train.sh
notebooks/: analyze_synthetic_data.py  experiment_plan.ipynb  report.ipynb  result_analysis.ipynb  sample_synthetic_data.py
syncomp/metrics/: __init__.py  corr.py  feature.py  fidelity.py  privacy.py  utility.py
syncomp/models/: TabDDPMdiff.py  __init__.py  autoencoder.py  autogan.py  diffusion.py  process_GQ.py
syncomp/models/ctab_gan_model/: ctabgan.py
syncomp/models/ctab_gan_model/pipeline/: data_preparation.py
syncomp/models/ctab_gan_model/synthesizer/: ctabgan_synthesizer.py
syncomp/utils/: __init__.py  data_loader.py  data_util.py  holdout_util.py  train_util.py  viz_util.py
