[tool.poetry]
name = "syncomp"
version = "0.1.0"
description = ""
authors = ["Yu Xia <yx1675@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.1"
dask = { version = ">=2023.1.1", extras = ["complete"] }
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
tqdm = "^4.66.2"
dython = "^0.7.5"
matplotlib = "^3.8.4"
torch = "^2.2.2"
completejourney-py = "^0.0.3"
iprogress = "^0.4"
ipywidgets = "^8.1.2"
tapas = {git = "https://github.com/alan-turing-institute/tapas.git"}
ctgan = {git = "https://github.com/sdv-dev/CTGAN.git"}
torchvision = "^0.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
ipython = "^8.8.0"
jupyterlab = "^3.5.3"
jupytext = "^1.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
